css/minetgm.css
* {
    margin: 0;
    box-sizing: border-box; /* padding and border incleded in the width/height */
    overflow-y: hidden;
    overflow-x: hidden;
    scrolling: no;
    seamless: seamless;
	outline: none;
}

@font-face {
  font-family: "DS-Digital";
  src: url(./DS-DIGI.TTF) format("truetype");
}

@font-face {
  font-family: "Liquid Crystal";
  src: url(./LiquidCrystal-Normal.otf) format("truetype");
}

.digital_font {
 font-family: "Liquid Crystal", sans-serif;
 font-size: 40px;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

select {
    -webkit-appearance: none;
    -moz-appearance: none;
    padding: 5px 25px 5px 5px;
    background: url('../img/dr_down_16.png') no-repeat right;
}

.minetgm {
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

select::-ms-expand {
    display: none;
}

table {
  border-collapse: collapse;
}

.transition {
    transition: background 800ms;
}

#settings-btn {
    position: fixed;
    right: 0;
    top: 0;
    width: 5vmin;
    height: 5vmin;
    padding: 0;
    background: transparent url('../img/settings_48.png') no-repeat;
    background-size: 5vmin 5vmin;
    opacity: 0.10;
    border: none;
    outline-style: none;
    transition: opacity 500ms;
}

#settings-btn:hover {
    opacity: 1;
}

.grid-input {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
}

.hover-text-bold:hover {
    font-weight: bold;
}

.display-block {
    display: block;
}

.display-none {
    display: none;
}

